Wed Jan 24 16:59:05 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltInternals.h libxslt/pattern.c: fixed problems
	  with non-named rules (*, ...) added accelerators
	* libxslt/templates.[ch]: added xsltEvalTemplateString()
	  and xsltEvalAttrValueTemplate() high level functions
	* libxslt/transform.c: fixed the part where attributes
	  had to be looked at as templates, added comment and
	  PI generation
	* TODO FEATURES: updated to reflect the new state

Wed Jan 24 05:33:54 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.[ch] Makefile.am: added new module functions
	  with templates for the XSLT functions.
	* libxslt/variables.h templates.c: added registrations of new
	  functions when an XPath context is created

Tue Jan 23 17:24:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/Makefile.am: cleanup
	* libxslt/pattern.c: should support most of the patterns now
	  except ID/Key and maybe some namespace checks when having
	  a default namespace
	* TODO: updated

Tue Jan 23 14:58:32 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am libxslt.spec.in tests/REC1/Makefile.am
	  tests/REC2/Makefile.am: updated the makefiles and spec files to
	  add tests, and the FEATURES file to the RPM

Mon Jan 22 23:35:57 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am libxslt.spec.in libxslt/Makefile.am tests/Makefile.am:
	  prepared the Makefiles and spec files for a first release.
	* COPYING.LIB: added LGPL Licence

Mon Jan 22 22:36:43 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: applied cleanup patch from Bjorn Reese
	  <breese@mail1.stofanet.dk>

Mon Jan 22 20:24:36 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: first try to get a spec file

Mon Jan 22 19:37:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: avoid segfault when stylesheet is inproper